Completion - 85% with NGRX autopopulate data and Dialog

--- a/src/app/feature/component/question/question.component.html
+++ b/src/app/feature/component/question/question.component.html
@@ -49,3 +49,15 @@
     </div>
   </ng-template>
 </div>
+
+<ng-template #formSubmitDialog>
+  <h2 matDialogTitle>Customer Questionaire</h2>
+  <p matDialogContent>
+    Thank you for your submission. All your data's are persistent in your
+    browser
+  </p>
+  <mat-dialog-actions align="end">
+    <button mat-button matDialogClose="Cancel" color="primary">Cancel</button>
+    <button mat-button matDialogClose="Home" color="warn">Home</button>
+  </mat-dialog-actions></ng-template
+>
