Completion - 100% with one component test coverage, eslintfix

--- a/src/app/feature/component/home/home.component.html
+++ b/src/app/feature/component/home/home.component.html
@@ -8,12 +8,7 @@
         one. Create a typeform instead—and make everyone happy.
       </h3>
       <br />
-      <button
-        type="button"
-        class="btn btn-primary"
-        tooltip="Would you like to take up."
-        (click)="onNavigateQuestion()"
-      >
+      <button type="button" class="btn btn-primary" tooltip="Would you like to take up." (click)="onNavigateQuestion()">
         Get Started - it's free
       </button>
     </div>
